--- a/web/frontend/assets/aistyle.css
+++ b/web/frontend/assets/aistyle.css
@@ -48,6 +48,10 @@
   gap: 10px;
 }
 
+.ai-keywords-input {
+  width: 400px;
+}
+
 .ai_seo_title_container {
   padding-bottom: 8px;
   margin-bottom: 10px;
