--- a/web/frontend/assets/aistyle.css
+++ b/web/frontend/assets/aistyle.css
@@ -30,7 +30,6 @@
 .ai-button-with-text {
   display: flex;
   justify-content: center;
-  align-items: center;
   gap: 8px;
   border: 1px solid rgba(221, 224, 228, 1);
   padding: 8px 12px;
@@ -38,10 +37,15 @@
   background-color: #459a4e;
   color: #ffffff;
   border-radius: 8px;
+  width: 100%;
 }
 
 .ai-button-generate-text {
   font-size: 14px;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 .ai-content-generation {
