seo score color

--- a/web/frontend/assets/style.css
+++ b/web/frontend/assets/style.css
@@ -1,546 +1,7 @@
-.bold_title {
-  font-weight: bold;
-  font-size: 13px;
-}
-
-.d-flex {
-  display: flex;
-}
-
-.d-flex-gap {
-  gap: 12px;
-}
-
-.flex-warp {
-  flex: warp;
-}
-
-.red_color {
-  color: red;
-}
-
-.items_center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.content__margin_top {
-  margin-top: 12px;
-}
-
-.app__container {
-  display: flex;
-  gap: 24px;
-  min-height: 100vh;
-}
-
-.app__sidebar_container {
-  width: 220px;
-  background-color: #ebebeb;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  padding: 12px;
-  gap: 4px;
-}
-
-.app__dashboard_container {
-  background-color: #ebebeb;
-  width: 100%;
-  padding: 16px;
-  border-radius: 8px;
-}
-
-.sidebar__menu_item {
-  font-size: 13px;
-  cursor: pointer;
-  transition: all 0.5s ease;
-  padding: 4px 12px;
-  border-radius: 10px;
-}
-
-.sidebar__menu_item:hover {
-  background-color: #f1f2f4;
-}
-
-.sidebar__selected_item {
-  background-color: #ffffff;
-}
-
-.app__feature_product_image {
-  width: 40px;
-  height: 40px;
-  object-fit: contain;
-}
-
-.app__product_seo_creation {
-  padding: 10px;
-}
-
-.seo-form-container {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  border: 1px solid rgba(221, 224, 228, 1);
-  border-radius: 10px;
-  padding: 12px 16px;
-}
-
-.app__product_image_container {
-  padding-top: 12px;
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
-.app__product_alt_image {
-  width: 80px;
-  height: 80px;
-  flex: 1;
-}
-
-.app__product_alt_image-smaller {
-  width: 40px;
-  height: 40px;
-  flex: 1;
-}
-
-.app__product_alt_image img,
-.app__product_alt_image-smaller img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.app__product_alt_item {
-  display: flex;
-  gap: 16px;
-}
-
-.app__product_alt_textarea {
-  flex: 10;
-}
-
-.app__seo_alt_form {
-  display: flex;
-  width: 100%;
-  gap: 12px;
-}
-
-.app__seo_alt_textarea {
-  flex: 1;
-}
-
-.app_seo_alt_button {
-  display: flex;
-  justify-content: end;
-  align-items: end;
-}
-
-.app__seo_score_container {
-  height: 100%;
-  margin-top: 12px;
-}
-
-.seo_score_page_title_container {
-  background-color: #ffffff;
-  padding: 24px;
-  border-radius: 12px;
-  margin-bottom: 12px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.seo_score_page_title {
-  font-size: 28px;
-}
-
-.seo_score_page_description {
-  margin-top: 12px;
-}
-
-.seo_score_container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 12px;
-  background-color: #ffffff;
-  padding: 24px;
-  border-radius: 12px;
-}
-
-.seo_score_container_grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 12px;
-}
-
-.seo_score_result_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 140px;
-  height: 140px;
-  border-radius: 50%;
-}
-
-.seo_score_title {
-  font-size: 16px;
-  margin-bottom: 12px;
-}
-
-.seo_score_result {
-  font-size: 36px;
-  color: #ffffff;
-}
-
-.seo_score_insights_url {
-  color: #f27321;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.seo_score_insights_url:hover {
-  color: rgba(69, 143, 255, 1);
-}
-
-.app_product_bulk_update {
-  display: flex;
-  justify-content: center;
-  gap: 12px;
-  border-bottom: 1px solid rgba(221, 224, 228, 1);
-  padding: 10px;
-  background-color: #ffffff;
-}
-
-.seo_score_analysis {
-  margin-top: 12px;
-}
-
-.seo_list_for_score {
-  display: flex;
-  gap: 32px;
-}
-
-.product_bulk_AI_selection {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.app_product_bulk_image {
-  flex: 4;
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
-.app_product_bulk_input {
-  flex: 3;
-}
-
-.product_bulk_update_description {
-  flex: 4;
-}
-
-.product_bulk_AI_button {
-  flex: 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.app_product_bulk_update_button {
-  display: flex;
-  justify-content: end;
-  margin-bottom: 12px;
-}
-
-.seo_scan_page {
-  display: flex;
-  flex-direction: column;
-  margin: 12px 0;
-}
-
-.seo_scan_meta_info {
-  border: 1px solid rgba(221, 224, 228, 1);
-  padding: 10px;
-  margin-bottom: 12px;
-}
-
-.seo_scan_product_section {
-  display: flex;
-  gap: 12px;
-  border-bottom: 1px solid rgba(221, 224, 228, 1);
-  padding: 8px 0;
-}
-
-.seo_scan_product_section:last-child {
-  border-bottom: none;
-}
-
-.seo_scan_product_meta {
-  flex: 2;
-  font-weight: bold;
-}
-
-.seo_scan_product_meta_data {
-  flex: 10;
-}
-
-.seo_scan_product_title_suggestion {
-  border-bottom: 1px solid rgba(221, 224, 228, 1);
-  margin-bottom: 4px;
-  padding-bottom: 4px;
-}
-
-.select_for_industry {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
-
-.button_for_industry_info {
-  margin-top: 22px;
-}
-
-.organization_industry_list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 6px;
-}
-
-.seo_validation_error {
-  color: red;
-}
-
-.seo_error_list_container {
-  padding: 12px;
-}
-
-.seo_error_insights_options {
-  margin-bottom: 24px;
-}
-
-.seo_error_list {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  background-color: #ffffff;
-  border-radius: 8px;
-  padding: 14px;
-}
-
-.seo_error_list_title {
-  font-size: 18px;
-  padding: 0 12px;
-}
-
-.seo_auto_redirect_page {
-  display: flex;
-  gap: 12px;
-  padding: 12px;
-}
-
-.seo_auto_redirect_form_container {
-  display: flex;
-  flex-direction: column;
-  background-color: #ffffff;
-  padding: 16px;
-  border-radius: 12px;
-  flex: 1;
-  gap: 12px;
-  height: 100%;
-}
-
-.seo_auto_redirect_form {
-  display: flex;
-  gap: 16px;
-}
-
-.seo_auto_redirect_button {
-  height: 100%;
-  padding-top: 23px;
-}
-
-.seo_auto_redirect_list_container {
-  background-color: #ffffff;
-  padding: 18px;
-  border-radius: 12px;
-  flex: 1;
-  gap: 16px;
-}
-
-.seo_auto_redirect_reset {
-  cursor: pointer;
-  padding: 4px 12px;
-  border: 1px solid rgba(221, 224, 228, 1);
-  border-radius: 12px;
-}
-
-.seo_auto_redirect_list_title_container {
-  display: flex;
-  gap: 12px;
-}
-
-.seo_auto_redirect_list_title {
-  font-size: 16px;
-  font-weight: 500;
-}
-
-.seo_auto_redirect_item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 4px;
-  border-bottom: 1px solid rgba(221, 224, 228, 1);
-}
-
-.sidebar__toggle_button {
-  display: none;
-}
-
-/* new */
-.app__sidebar {
-  position: relative;
-}
-
-.sidebar__menu {
-  display: flex;
-  flex-direction: column;
-  width: 250px;
-  background-color: #f4f4f8;
-  padding: 10px;
-  height: 100vh;
-  transition: transform 0.3s ease;
-}
-
-.sidebar__menu_item {
-  padding: 12px 20px;
-  margin: 4px 0;
-  cursor: pointer;
-  color: #333;
-  transition: background-color 0.3s ease;
-}
-
-.sidebar__menu_item:hover {
-  background-color: #e0e0e0;
-}
-
-.sidebar__selected_item {
-  background-color: #d3d3d3;
-  font-weight: bold;
-}
-
-.sidebar__toggle_button {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  background: none;
-  border: none;
-  cursor: pointer;
-  font-size: 24px;
-  display: none;
-}
-
-.sidebar__toggle_icon {
-  height: 36px;
-  width: 36px;
-}
-
-.product__search_container {
-  display: flex;
-  gap: 12px;
-}
-
-/* card content */
-
-.card_container {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  width: 100%;
-  height: 100%;
-}
-
-.card_content_container {
-  background-color: rgba(255, 255, 255, 1);
-  box-shadow: 0rem 0.125rem 0.25rem rgba(31, 33, 36, 0.1),
-    0rem 0.0625rem 0.375rem rgba(31, 33, 36, 0.05);
-  outline: 0.0625rem solid transparent;
-  width: 100%;
-  padding: 20px;
-  border-radius: 8px;
-}
-
-.trix-editor-container {
-  width: 100%;
-}
-
-.blog_generate_container {
-  display: flex;
-  justify-content: center;
-}
-
-.blog_generate_AI_update_button {
-  display: flex;
-  justify-content: end;
-}
-
-.blog_generate_image {
-  width: 100%;
-  height: 250px;
-  position: relative;
-}
-
-.blog_generate_image img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.blog_generate_image_delete {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-@media (max-width: 850px) {
-  .app__container {
-    gap: 2px;
-  }
-
-  .app__dashboard_container {
-    padding: 0px;
-  }
-
-  .sidebar__menu {
-    position: fixed;
-    left: -250px;
-    transform: translateX(0);
-    z-index: 500;
-  }
-
-  .sidebar__menu.active {
-    transform: translateX(250px);
-  }
-
-  .sidebar__toggle_button {
-    display: block;
-  }
-}
-
-@media (min-width: 851px) {
-  .sidebar__menu {
-    transform: translateX(0);
-    position: relative;
-  }
-
-  .sidebar__toggle_button {
-    display: none;
-  }
+/* Matrix result */
+.matrix_results-value {
+  font-size: 20px;
+  font-weight: 550;
+  line-height: 28px;
+  letter-spacing: 0px;
 }
